syntax = "proto3";

package task;

service TasksService {
    rpc FindAllTasks(FindAllTasksRequest) returns (TasksResponse);
    rpc FindOneTask(FindOneTaskRequest) returns (TasksResponse);
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (TaskResponse);
    rpc FindAllTaskColumn(FindAllTaskColumnRequest) returns (TaskColumnsResponse);
    rpc CreateTaskColumn(CreateTaskColumnRequest) returns (TaskColumnResponse);
    rpc UpdateTaskColumn(UpdateTaskColumnRequest) returns (TaskColumnResponse);
    rpc RemoveTaskColumn(RemoveTaskColumnRequest) returns (TaskColumnResponse);
}

message Empty {}

message FindAllTasksRequest {
    oneof Task {
        string id = 1;
        string createdBy = 2;
        string projectId = 3;
        string taskColumnId = 4;
    }
}

message Resources {
    oneof Resources {
        int32 id = 1;
        int32 unit = 2;
        int32 taskId = 3;
    }
}

message FindAllTasksResponse {
    repeated Task tasks = 1;
}

message FindOneTaskRequest {
    string id = 1;
}

message FindOneTaskResponse {
    repeated Task tasks = 1;
}

message CreateTaskRequest {
    oneof Task {
        string name = 1;
        string featuredImage = 2;
        string description = 3;
        string status = 4;
        string priority = 5;
        string startDate = 6;
        string endDate = 7;
        string createdBy = 8;
        string projectId = 9;
        string taskColumnId = 10;
    }
    repeated Subtasks subtasks = 11;
    repeated string assignees = 12;
    repeated Dependencies dependencies = 13;
}

message UpdateTaskRequest {
    string id = 1;
    oneof Task {
        string name = 2;
        string featuredImage = 3;
        string description = 4;
        string status = 5;
        string priority = 6;
        string startDate = 7;
        string endDate = 8;
        string taskColumnId = 9;
    }
    repeated Subtasks subtasks = 10;
    repeated string assignees = 12;
    repeated Dependencies dependencies = 13;
    repeated Resources resources = 14;
}

message DeleteTaskRequest {
    string id = 1;
}

message Subtasks {
    oneof Subtasks {
        string id = 1;
    }
    string label = 2;
    bool status = 3;
}

message Dependencies {
    oneof Dependencies {
        string id = 1;
    }
    string from = 2;
    string to = 3;
    string type = 4;
    int32 lagTime = 5;
}

message Task {
    string id = 1;
    string name = 2;
    string featuredImage = 3;
    string description = 4;
    string status = 5;
    string priority = 6;
    string startDate = 7;
    string endDate = 8;
    string createdBy = 9;
    string taskColumnId = 10;
    repeated Subtasks subtasks = 11;
    repeated string assignees = 12;
    repeated Dependencies dependencies = 13;
    repeated Resources resources = 14;
}

message TaskResponse {
  int32 statusCode = 1;
  string message = 2;
  Task data = 3;
}

message TasksResponse {
  oneof ProjectResponse {
    int32 statusCode = 1;
    string message = 2;
  }
  repeated Task data = 3;
}

message TaskColumn {
    string id = 1;
    string name = 2;
    int32 limit = 3;
    int32 order = 4;
    string projectId = 5;
    repeated Task task = 6;
}

message TaskColumnResponse {
    int32 statusCode = 1;
    string message = 2;
    TaskColumn data = 3;
}

message TaskColumnsResponse {
    int32 statusCode = 1;
    string message = 2;
    repeated TaskColumn data = 3;
}

message FindAllTaskColumnRequest {
    int32 projectId = 1;
}

message CreateTaskColumnRequest {
    string name = 1;
    oneof TaskColumn {
        int32 limit = 2;
    }
    int32 order = 3;
    string projectId = 4;
}

message UpdateTaskColumnRequest {
    string id = 1;
    oneof TaskColumn {
        string name = 2;
        int32 order = 3;
        int32 limit = 4;
    }
}

message RemoveTaskColumnRequest { string id = 1; }